[project]
name = "deeplearning-langchain-llm-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kwwutils>=0.1.15",
    "langchain>=0.3.14",
    "langchain-experimental>=0.3.4",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-timeout>=2.3.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.2",
]
